# Modern-robotics

./: .gitignore  README.md
CourseProject/Course2/: iterates.csv  log.txt
CourseProject/Course2/code/: IKinBodyIterates.py
CourseProject/Course3/: simulation1.csv  simulation2.csv
CourseProject/Course3/Code/: SimulationDynamic.py
CourseProject/Course4/Week1Project/code/: Astar.py
CourseProject/Course4/Week1Project/results/: path.csv
CourseProject/Course4/Week2Project/: README.txt
CourseProject/Course4/Week2Project/code/: RRT.py
CourseProject/Course4/Week2Project/result/: edges.csv  nodes.csv  path.csv
CourseProject/Course5/Week1Project/result/: closed.txt  open.txt
ModernRobotics/: FormClosure.m  ModernRoboticsCourseI.py  ModernRoboticsCourseII.py  ModernRoboticsCourseIII.py  ModernRoboticsCourseIV.py  ModernRoboticsCourseV.m
ModernRoboticsCpp/: CMakeLists.txt
ModernRoboticsCpp/Course1/: CMakeLists.txt
ModernRoboticsCpp/Course1/include/: FoundationsMotion.h
ModernRoboticsCpp/Course1/src/: main.cpp
ModernRoboticsCpp/Course2/: CMakeLists.txt
ModernRoboticsCpp/Course2/include/: PCH.h  RobotKinematics.h
ModernRoboticsCpp/Course2/src/: main.cpp
ModernRoboticsCpp/MRlib/: modern_robotics.h
